triton-vm/trybuild/macro_profile_stop_is_not_pub.stderr
error[E0603]: macro `profile_stop` is private
 --> trybuild/macro_profile_stop_is_not_pub.rs:1:26
  |
1 | use triton_vm::profiler::profile_stop;
  |                          ^^^^^^^^^^^^ private macro
  |
note: the macro `profile_stop` is defined here
 --> src/profiler.rs
  |
  | pub(crate) use profile_stop;
  |                ^^^^^^^^^^^^
